finishes the welcome modal

--- a/assets/style.css.liquid
+++ b/assets/style.css.liquid
@@ -1039,10 +1039,19 @@ header.darken, #CartContainer.darken, .mobile-nav1.darken { box-shadow: 1px 1px 
   background-color: #fff;
   width: fit-content;
 }
-
+.newsletter_email {
+    margin: 0 0 20px 0;
+    background: transparent;
+    border: 1px solid #d1cdcd;
+}
+.klaviyo-padding { padding: 20px; }
 .border-lightgray { border: 2px solid #d1cdcd; }
 table .lg { background-color: #d1cdcd; }
-
+#newsletter_popup2 {
+  max-width: 550px;
+  min-width: 300px;
+  width: 80%; 
+}
 /*contact us */
 .contact_input, .newsletter_email  {
     padding: 15px;
@@ -1052,8 +1061,9 @@ table .lg { background-color: #d1cdcd; }
 }
 #contact-submit-wrapper, .klaviyo_submit_button {
     padding: 15px;
-    background: gray;
+    background: #7b8284;
     border-radius: 20px;
+    border: 1px solid #7b8284;
 }
 #contact-submit-wrapper input, .klaviyo_submit_button span {
     font-size: 10pt;
