styles success messages and exit pop

--- a/assets/style.css.liquid
+++ b/assets/style.css.liquid
@@ -1047,11 +1047,12 @@ header.darken, #CartContainer.darken, .mobile-nav1.darken { box-shadow: 1px 1px 
 .klaviyo-padding { padding: 20px; }
 .border-lightgray { border: 2px solid #d1cdcd; }
 table .lg { background-color: #d1cdcd; }
-#newsletter_popup2 {
+#newsletter_popup2, #exit_offer {
   max-width: 550px;
   min-width: 300px;
   width: 80%; 
 }
+#exit_offer img, #newsletter_popup2 img { margin-bottom: -5px; }
 /*contact us */
 .contact_input, .newsletter_email  {
     padding: 15px;
