--- a/snippets/klaviyo-pop.liquid
+++ b/snippets/klaviyo-pop.liquid
@@ -28,8 +28,7 @@ $(document).ready(function(){
   // var pacasVisit = readCookie('pacasVisit')
   var newsletterModal = readCookie('newsletterModal')
   // if ((flowFinish) && (gekksVisit) && !(newsletterModal) && $('.mobile-nav1:visible').length == 0){
-  // if ( !(newsletterModal) && $('.mobile-nav1:visible').length == 0){
-  if ($('.mobile-nav1:visible').length == 0){
+  if ( !(newsletterModal) && $('.mobile-nav1:visible').length == 0){
     setTimeout(function(){
       $('.modal').removeClass('darken')
       if ($('.modal:visible').length == 0) {
