changes nav to match page header on our story

--- a/templates/page.our-story.liquid
+++ b/templates/page.our-story.liquid
@@ -1,3 +1,7 @@
+<style>
+ nav { background-color: #f5fcfc}
+</style> 
+
 <main id="our-story">
   <section class="flex-container-no background-blue page-header">
     <div class="half" style="width: 50%;"></div>
