--- a/templates/cart.liquid
+++ b/templates/cart.liquid
@@ -13,7 +13,7 @@
     {% endif %}
     {% if cart.item_count > 0 %}
       <form action="/cart" method="post">
-        <div class="flex-container">
+        <div class="flex-container-do">
           <div class="two-thirds">
             {% for item in cart.items %}
               <div class="border-bottom-gray">
