creates template for mobile drawer

--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -36,3 +36,83 @@
   <img src="{{'cart.png' | asset_url}}" id="mobile-cart"/>
  </nav> 
  
+ <div class="mobile-cart-drawer mobile-nav1 tac double-padding" style="display: none;">
+  <img src="{{'pacas.png' | asset_url}}" class="jlogo">
+  <img src="{{'close-arrow.png' | asset_url}}" id="mobile-cart-close"/>
+  <div class="accent-padding border-bottom-gray">
+    <h4 class="tac"> Women's <span class="fr">></span></h4>
+    <div class="childlinks" style="display: none;">
+      <div class="flex-container-no">
+        <div class="half background-blue accent-padding drawer-collection-wrapper tac">
+          <p>Athletic</p>
+          <img src="{{'bombas_socksample.png' | asset_url}}" class="fw"/>
+        </div>
+        <div class="half background-blue accent-padding drawer-collection-wrapper tac">
+          <p>Casual</p>
+          <img src="{{'bombas_socksample.png' | asset_url}}" class="fw"/>
+        </div>
+      </div>
+      <div class="flex-container-no">
+        <div class="half background-blue accent-padding drawer-collection-wrapper tac">
+          <p>Dress</p>
+          <img src="{{'bombas_socksample.png' | asset_url}}" class="fw"/>
+        </div>
+        <div class="half drawer-collection-wrapper ">
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="accent-padding border-bottom-gray">
+    <h4 class="tac"> Men's <span class="fr">></span></h4>
+    <div class="childlinks" style="display: none;">
+      <div class="flex-container-no">
+        <div class="half background-blue accent-padding drawer-collection-wrapper tac">
+          <p>Athletic</p>
+          <img src="{{'bombas_socksample.png' | asset_url}}" class="fw"/>
+        </div>
+        <div class="half background-blue accent-padding drawer-collection-wrapper tac">
+          <p>Casual</p>
+          <img src="{{'bombas_socksample.png' | asset_url}}" class="fw"/>
+        </div>
+      </div>
+      <div class="flex-container-no">
+        <div class="half background-blue accent-padding drawer-collection-wrapper tac">
+          <p>Dress</p>
+          <img src="{{'bombas_socksample.png' | asset_url}}" class="fw"/>
+        </div>
+        <div class="half drawer-collection-wrapper ">
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="accent-padding border-bottom-gray">
+    <h4 class="tac"> Kid's <span class="fr">></span></h4>
+    <div class="childlinks" style="display: none;">
+      <div class="flex-container-no">
+        <div class="half background-blue accent-padding drawer-collection-wrapper tac">
+          <p>Athletic</p>
+          <img src="{{'bombas_socksample.png' | asset_url}}" class="fw"/>
+        </div>
+        <div class="half background-blue accent-padding drawer-collection-wrapper tac">
+          <p>Casual</p>
+          <img src="{{'bombas_socksample.png' | asset_url}}" class="fw"/>
+        </div>
+      </div>
+      <div class="flex-container-no">
+        <div class="half background-blue accent-padding drawer-collection-wrapper tac">
+          <p>Dress</p>
+          <img src="{{'bombas_socksample.png' | asset_url}}" class="fw"/>
+        </div>
+        <div class="half drawer-collection-wrapper ">
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="accent-padding border-bottom-gray">
+    <h4 class="tac">Our Story</h4>
+  </div>
+  <div class="accent-padding border-bottom-gray">
+    <h4 class="tac">Live Feed</h4>
+  </div>
+</div>
+
