changes some confusing naming conventions

--- a/assets/style.css.liquid
+++ b/assets/style.css.liquid
@@ -1105,7 +1105,7 @@ table .lg { background-color: #d1cdcd; }
 }
 
 /* mobile nav drawer */
-.mobile-cart-drawer {
+.mobile-drawer {
   position: absolute;
   top: 0;
   width: 80%;
@@ -1116,13 +1116,13 @@ table .lg { background-color: #d1cdcd; }
   overflow-y: scroll;
   border-right: 1px solid #7b8284;
 }
-#mobile-cart-close { 
+#mobile-drawer-close { 
   position: absolute;
   max-width: 35px;
   right: 20px;
   transform: rotate(180deg);
  }
-.mobile-cart-drawer .jlogo { margin-bottom: 20px; }
+.mobile-drawer .jlogo { margin-bottom: 20px; }
 .childlinks { padding: 10px; }
 .drawer-collection-wrapper img { max-width: 100px; }
 .drawer-collection-wrapper { margin: 10px; }
