--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -36,9 +36,9 @@
   <img src="{{'cart.png' | asset_url}}" id="mobile-cart"/>
  </nav> 
  
- <div class="mobile-cart-drawer mobile-nav1 tac double-padding" style="display: none;">
+ <div class="mobile-drawer mobile-nav1 tac double-padding" style="display: none;">
   <img src="{{'pacas.png' | asset_url}}" class="jlogo">
-  <img src="{{'close-arrow.png' | asset_url}}" id="mobile-cart-close"/>
+  <img src="{{'close-arrow.png' | asset_url}}" id="mobile-drawer-close"/>
   <div class="accent-padding border-bottom-gray">
     <h4 class="tac"> Women's <span class="fr">></span></h4>
     <div class="childlinks" style="display: none;">
