rotates the arrows on click

--- a/assets/style.css.liquid
+++ b/assets/style.css.liquid
@@ -1130,3 +1130,6 @@ table .lg { background-color: #d1cdcd; }
   margin-right: 20px; 
   margin-left: -28.41px; 
 }
+.rotate90 {
+  transform: rotate(90deg);
+}
