--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -40,70 +40,70 @@
   <img src="{{'pacas.png' | asset_url}}" class="jlogo">
   <img src="{{'close-arrow.png' | asset_url}}" id="mobile-drawer-close"/>
   <div class="accent-padding border-bottom-gray">
-    <h4 class="tac"> Women's <span class="fr">></span></h4>
-    <div class="childlinks" style="display: none;">
-      <div class="flex-container-no">
-        <div class="half background-blue accent-padding drawer-collection-wrapper tac">
+    <h4 class="tac collection-prod"> Women's <span class="fr">></span></h4>
+    <div class="childlink" style="display: none;">
+      <div class="flex-container-no jcc">
+        <div class="half-no background-blue accent-padding drawer-collection-wrapper tac">
           <p>Athletic</p>
           <img src="{{'bombas_socksample.png' | asset_url}}" class="fw"/>
         </div>
-        <div class="half background-blue accent-padding drawer-collection-wrapper tac">
+        <div class="half-no background-blue accent-padding drawer-collection-wrapper tac">
           <p>Casual</p>
           <img src="{{'bombas_socksample.png' | asset_url}}" class="fw"/>
         </div>
       </div>
-      <div class="flex-container-no">
-        <div class="half background-blue accent-padding drawer-collection-wrapper tac">
+      <div class="flex-container-no jcc">
+        <div class="half-no background-blue accent-padding drawer-collection-wrapper tac">
           <p>Dress</p>
           <img src="{{'bombas_socksample.png' | asset_url}}" class="fw"/>
         </div>
-        <div class="half drawer-collection-wrapper ">
+        <div class="half-no drawer-collection-wrapper ">
         </div>
       </div>
     </div>
   </div>
   <div class="accent-padding border-bottom-gray">
-    <h4 class="tac"> Men's <span class="fr">></span></h4>
-    <div class="childlinks" style="display: none;">
-      <div class="flex-container-no">
-        <div class="half background-blue accent-padding drawer-collection-wrapper tac">
+    <h4 class="tac collection-prod"> Men's <span class="fr">></span></h4>
+    <div class="childlink" style="display: none;">
+      <div class="flex-container-no jcc">
+        <div class="half-no background-blue accent-padding drawer-collection-wrapper tac">
           <p>Athletic</p>
           <img src="{{'bombas_socksample.png' | asset_url}}" class="fw"/>
         </div>
-        <div class="half background-blue accent-padding drawer-collection-wrapper tac">
+        <div class="half-no background-blue accent-padding drawer-collection-wrapper tac">
           <p>Casual</p>
           <img src="{{'bombas_socksample.png' | asset_url}}" class="fw"/>
         </div>
       </div>
-      <div class="flex-container-no">
-        <div class="half background-blue accent-padding drawer-collection-wrapper tac">
+      <div class="flex-container-no jcc">
+        <div class="half-no background-blue accent-padding drawer-collection-wrapper tac">
           <p>Dress</p>
           <img src="{{'bombas_socksample.png' | asset_url}}" class="fw"/>
         </div>
-        <div class="half drawer-collection-wrapper ">
+        <div class="half-no drawer-collection-wrapper ">
         </div>
       </div>
     </div>
   </div>
   <div class="accent-padding border-bottom-gray">
-    <h4 class="tac"> Kid's <span class="fr">></span></h4>
-    <div class="childlinks" style="display: none;">
+    <h4 class="tac collection-prod"> Kid's <span class="fr">></span></h4>
+    <div class="childlink" style="display: none;">
       <div class="flex-container-no">
-        <div class="half background-blue accent-padding drawer-collection-wrapper tac">
+        <div class="half-no background-blue accent-padding drawer-collection-wrapper tac">
           <p>Athletic</p>
           <img src="{{'bombas_socksample.png' | asset_url}}" class="fw"/>
         </div>
-        <div class="half background-blue accent-padding drawer-collection-wrapper tac">
+        <div class="half-no background-blue accent-padding drawer-collection-wrapper tac">
           <p>Casual</p>
           <img src="{{'bombas_socksample.png' | asset_url}}" class="fw"/>
         </div>
       </div>
       <div class="flex-container-no">
-        <div class="half background-blue accent-padding drawer-collection-wrapper tac">
+        <div class="half-no background-blue accent-padding drawer-collection-wrapper tac">
           <p>Dress</p>
           <img src="{{'bombas_socksample.png' | asset_url}}" class="fw"/>
         </div>
-        <div class="half drawer-collection-wrapper ">
+        <div class="half-no drawer-collection-wrapper ">
         </div>
       </div>
     </div>
