links to the pages in the mobile nav that presently exist

--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -36,7 +36,7 @@
   <img src="{{'cart.png' | asset_url}}" id="mobile-cart"/>
  </nav> 
  
- <div class="mobile-drawer mobile-nav1 tac double-padding" style="display: none;">
+ <div class="mobile-drawer mobile-nav1 tac double-padding mo" style="display: none;">
   <img src="{{'pacas.png' | asset_url}}" class="jlogo">
   <img src="{{'close-arrow.png' | asset_url}}" id="mobile-drawer-close"/>
   <div class="accent-padding border-bottom-gray">
@@ -109,10 +109,10 @@
     </div>
   </div>
   <div class="accent-padding border-bottom-gray">
-    <h4 class="tac">Our Story</h4>
+    <a href="/pages/our-story"><h4 class="tac">Our Story</h4></a>
   </div>
   <div class="accent-padding border-bottom-gray">
-    <h4 class="tac">Live Feed</h4>
+    <a href="/pages/live-feed"><h4 class="tac">Live Feed</h4></a>
   </div>
 </div>
 
