changes the border color and updates the jquery body touch method to slide out left

--- a/assets/style.css.liquid
+++ b/assets/style.css.liquid
@@ -1115,7 +1115,7 @@ table .lg { background-color: #d1cdcd; }
   max-width: 450px;
   height: 100vh;
   overflow-y: scroll;
-  border-right: 1px solid #7b8284;
+  border-right: 1px solid  #d1cdcd;
      transform: translateX(-100%);
     -webkit-transform: translateX(-100%);
 }
