--- a/assets/style.css.liquid
+++ b/assets/style.css.liquid
@@ -77,6 +77,9 @@ html { padding-bottom: 0 !important; }
 .border-white { border: 1px solid #fff; }
 .border-gray { border: 1px solid #7b8284; }
 img { max-width: 100%; }
+@media only screen and (min-width: 1600px) {
+  #our-story .page-header {min-height: 650px;}
+}
 @media only screen and (min-width: 1100px) {
   h1 { font-size: 67pt; } 
   h2 { font-size: 34pt; } 
