adds the clickable class css and adds it to the html of relevant elements

--- a/assets/style.css.liquid
+++ b/assets/style.css.liquid
@@ -39,6 +39,7 @@
 .nmb { margin-bottom: 0; }
 .asfs { align-self: flex-start; }
 .fr { float: right; }
+.clickable { cursor: pointer; }
 body { 
   margin: 0;
   color:  #7b8284;
