--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -38,9 +38,9 @@
  
  <div class="mobile-drawer mobile-nav1 tac double-padding mo" style="display: none;">
   <img src="{{'pacas.png' | asset_url}}" class="jlogo">
-  <img src="{{'close-arrow.png' | asset_url}}" id="mobile-drawer-close"/>
+  <img src="{{'close-arrow.png' | asset_url}}" id="mobile-drawer-close" class="clickable"/>
   <div class="accent-padding border-bottom-gray">
-    <h4 class="tac collection-prod"> Women's <span class="fr">></span></h4>
+    <h4 class="tac collection-prod clickable"> Women's <span class="fr">></span></h4>
     <div class="childlink" style="display: none;">
       <div class="flex-container-no jcc">
         <div class="half-no background-blue accent-padding drawer-collection-wrapper tac">
@@ -63,7 +63,7 @@
     </div>
   </div>
   <div class="accent-padding border-bottom-gray">
-    <h4 class="tac collection-prod"> Men's <span class="fr">></span></h4>
+    <h4 class="tac collection-prod clickable"> Men's <span class="fr">></span></h4>
     <div class="childlink" style="display: none;">
       <div class="flex-container-no jcc">
         <div class="half-no background-blue accent-padding drawer-collection-wrapper tac">
@@ -86,7 +86,7 @@
     </div>
   </div>
   <div class="accent-padding border-bottom-gray">
-    <h4 class="tac collection-prod"> Kid's <span class="fr">></span></h4>
+    <h4 class="tac collection-prod clickable"> Kid's <span class="fr">></span></h4>
     <div class="childlink" style="display: none;">
       <div class="flex-container-no">
         <div class="half-no background-blue accent-padding drawer-collection-wrapper tac">
