--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -96,9 +96,9 @@
     </div>
   </div>
     <div class="flex-container-no jes">
-      <p><b>Athletic</b></p>
-      <p class="current"><b>Casual</b></p>
-      <p><b>Dress</b></p>
+      <p class="clickable"><b>Athletic</b></p>
+      <p class="current clickable"><b>Casual</b></p>
+      <p class="clickable"><b>Dress</b></p>
     </div>
 </section>
 
