updates the mission statement which is now super wordy and I have a feeling Ill be changing it again

--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -8,7 +8,7 @@
 </section>
 <section class="page-header tac">
   <img src="{{'paca-icon.png' | asset_url}}"  class="icon"/>
-  <p id="mission">We started Pacas to create greater social awareness for pediatric cancer patients by selling buttery soft socks made from alpacas.</p>
+  <p id="mission">We Started Pacas to bring you joy and comfort with buttery soft socks made from luxurious, all natural alpaca fleece. Every purchase goes towards taking Paca-on-Wheels around the nation to deliver Paca socks to children staying in hospitals.</p>
 </section>
 <section class="page-header tac" id="fresh">
   <h2 class="text-white accent">Shop</h2>
